--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.1",
-    "element-ui": "^2.10.0",
+    "element-ui": "^2.12.0",
     "file-saver": "^2.0.2",
     "moment": "^2.24.0",
     "qrcode": "^1.3.3",
@@ -28,6 +28,10 @@
     "@vue/cli-service": "^3.8.4",
     "@vue/eslint-config-prettier": "^4.0.1",
     "babel-eslint": "^10.0.2",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-preset-env": "^1.7.0",
     "echarts": "^4.2.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
@@ -38,7 +42,6 @@
     "script-loader": "^0.7.2",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10"
-    
   },
   "eslintConfig": {
     "root": true,
